<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.epgis.mapsdk.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:gravity="right"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_map_zoomin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/mapsdk_btn_background"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="@string/mapsdk_map_zoomin"
            android:onClick="onMapZoomIn" />

        <Button
            android:id="@+id/btn_map_zoomout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/mapsdk_btn_background"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="@string/mapsdk_map_zoomout"
            android:onClick="onMapZoomOut"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/btn_map_zoomto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/mapsdk_btn_background"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="@string/mapsdk_map_zoomto"
            android:onClick="onMapZoomTo"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/btn_map_zoomby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/mapsdk_btn_background"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="@string/mapsdk_map_zoomby"
            android:onClick="onMapZoomBy"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/btn_map_zoombyfocus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/mapsdk_btn_background"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="@string/mapsdk_map_zoombyfocus"
            android:onClick="onMapZoomByFocus"
            android:layout_marginTop="10dp" />

    </LinearLayout>

</RelativeLayout>