<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.epgis.mapsdk.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_move_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/mapsdk_btn_background"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="@string/mapsdk_animated_camera_move"
            android:onClick="onMoveCamera" />

        <Button
            android:id="@+id/btn_ease_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/mapsdk_btn_background"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="@string/mapsdk_animated_camera_ease"
            android:onClick="onEaseCamera"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/btn_animate_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/mapsdk_btn_background"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="@string/mapsdk_animated_camera_animated"
            android:onClick="onAnimateCamera"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/btn_cancel_animation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/mapsdk_btn_background"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="@string/mapsdk_animated_cancel_animation"
            android:onClick="onCancelAnimation"
            android:layout_marginTop="10dp" />

    </LinearLayout>

</RelativeLayout>