<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.epgis.mapsdk.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="93dp"
        tools:layout_editor_absoluteY="10dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        android:orientation="vertical">
        <Button
            android:id="@+id/btn_style_streets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/mapsdk_btn_background"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="@string/mapsdk_default_style_streets"
            android:layout_marginTop="10dp"
            android:onClick="onStyleStreets"/>

        <Button
            android:id="@+id/btn_style_streets_raster512"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/mapsdk_btn_background"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:text="@string/mapsdk_default_style_streets_raster512"
            android:onClick="onStyleStreetsRaster512" />

        <Button
            android:id="@+id/btn_style_streets_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/mapsdk_btn_background"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="@string/mapsdk_default_style_streets_dark"
            android:layout_marginTop="10dp"
            android:onClick="onStyleStreetsDark"/>


        <Button
            android:id="@+id/btn_style_satellite512"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/mapsdk_btn_background"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="@string/mapsdk_default_style_satellite512"
            android:onClick="onStyleSatellite512"
            android:layout_marginTop="10dp" />


    </LinearLayout>


</android.support.constraint.ConstraintLayout>