<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.epgis.mapsdk.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <Button
        android:id="@+id/btn_add_marker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/mapsdk_btn_background"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:text="@string/mapsdk_marker_add"
        android:onClick="onAddMarker"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"/>

    <Button
        android:id="@+id/btn_remove_marker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/mapsdk_btn_background"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:text="@string/mapsdk_marker_remove"
        android:onClick="onRemoveMarker"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_add_marker" />

    <Button
        android:id="@+id/btn_remove_markers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/mapsdk_btn_background"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:text="@string/mapsdk_markers_remove"
        android:onClick="onRemoveMarkers"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_remove_marker" />

</android.support.constraint.ConstraintLayout>